--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@ionic-native/status-bar": "^5.36.0",
-    "@ionic/angular": "^7.8.6",
+    "@ionic/angular": "^7.5.0",
     "@ionic/cordova-builders": "^11.0.0",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
@@ -43,7 +42,6 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "cordova-android": "^13.0.0",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^5.0.0",
@@ -60,6 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "quickhelp_nigeria": "file:android",
     "typescript": "~5.2.2"
   },
   "description": "An Ionic project",
@@ -71,9 +70,7 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   },
   "main": "karma.conf.js",
   "keywords": [],
