--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@awesome-cordova-plugins/splash-screen": "^6.7.0",
     "@ionic/angular": "^7.5.0",
     "@ionic/cordova-builders": "^11.0.0",
     "ionicons": "^7.2.1",
