moving towards the finishing line

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,5 @@
 {
-  "name": "QuickHelp_Nigeria",
-  "integrations": {
-    "cordova": {}
-  },
+  "name": "New Ionic App",
+  "integrations": {},
   "type": "angular"
 }
